--- a/public/css/edit.css
+++ b/public/css/edit.css
@@ -1,5 +1,6 @@
 .edit-area{
-    border: none;
+    border-color: #999;
+    border-radius: 5px;
     width: 100%;
-    height: 90%;
+    height: 82%;
 }
